[gd_scene load_steps=10 format=3 uid="uid://yqaf1cxr4njr"]

[ext_resource type="Script" path="res://src/ui/old_main_menu/old_main_menu.gd" id="1_vnu07"]
[ext_resource type="Texture2D" uid="uid://c7abrfwdcoqdf" path="res://src/ui/old_main_menu/assets/menu_background.jpg" id="2_yner8"]
[ext_resource type="PackedScene" uid="uid://dj18tmsspff4d" path="res://src/ui/common/styled_button/StyledButton.tscn" id="4_df5ml"]
[ext_resource type="FontFile" uid="uid://cxrrybs1vtjsh" path="res://assets/fonts/AvQest.ttf" id="5_7ycku"]
[ext_resource type="Texture2D" uid="uid://cahh042xli854" path="res://src/ui/common/styled_button/assets/kenney_borders/Default/Border/panel-border-000.png" id="6_22r4t"]
[ext_resource type="Texture2D" uid="uid://cpdbyaipup6ys" path="res://src/ui/old_main_menu/assets/tutorial.png" id="7_o14j8"]

[sub_resource type="Animation" id="Animation_5y77p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Menu/Subtitle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(112, 148)]
}

[sub_resource type="Animation" id="Animation_ibdon"]
resource_name = "start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Menu/ButtonBackgroundWrapper/ButtonBackground:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, -1472), Vector2(0, -144)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Menu/Title:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(-704, 56), Vector2(112, 56)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Menu/Subtitle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(-704, 148), Vector2(112, 148)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t3ipv"]
_data = {
"RESET": SubResource("Animation_5y77p"),
"start": SubResource("Animation_ibdon")
}

[node name="MainScene" type="Node2D" node_paths=PackedStringArray("animated_buttons", "tutorial_node", "subtitle_label", "build_tag_label")]
process_mode = 3
script = ExtResource("1_vnu07")
animated_buttons = [NodePath("CanvasLayer/Menu/ButtonBackgroundWrapper/ButtonBackground/VBoxContainer/StartButton"), NodePath("CanvasLayer/Menu/ButtonBackgroundWrapper/ButtonBackground/VBoxContainer/TutorialButton"), NodePath("CanvasLayer/Menu/ButtonBackgroundWrapper/ButtonBackground/VBoxContainer/SettingButton"), NodePath("CanvasLayer/Menu/ButtonBackgroundWrapper/ButtonBackground/VBoxContainer/QuitButton")]
tutorial_node = NodePath("CanvasLayer/Tutorial")
subtitle_label = NodePath("CanvasLayer/Menu/Subtitle")
build_tag_label = NodePath("CanvasLayer/Menu/ButtonBackgroundWrapper/ButtonBackground/VersionLabel")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_yner8")
expand_mode = 3

[node name="Title" type="RichTextLabel" parent="CanvasLayer/Menu"]
layout_mode = 1
offset_left = 112.0
offset_top = 56.0
offset_right = 824.0
offset_bottom = 440.0
theme_override_fonts/normal_font = ExtResource("5_7ycku")
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[left]LD56[/left]"
fit_content = true
scroll_active = false

[node name="Subtitle" type="RichTextLabel" parent="CanvasLayer/Menu"]
layout_mode = 1
offset_left = 112.0
offset_top = 148.0
offset_right = 824.0
offset_bottom = 532.0
theme_override_colors/default_color = Color(0.427493, 0.427493, 0.427493, 1)
theme_override_fonts/normal_font = ExtResource("5_7ycku")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "!! subtitle not set !!"
fit_content = true
scroll_active = false

[node name="ButtonBackgroundWrapper" type="Control" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -576.0
offset_right = -576.0
grow_horizontal = 0
grow_vertical = 2

[node name="ButtonBackground" type="ColorRect" parent="CanvasLayer/Menu/ButtonBackgroundWrapper"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -144.0
offset_right = 448.0
offset_bottom = 184.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu/ButtonBackgroundWrapper/ButtonBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -184.0
offset_right = 150.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="StartButton" parent="CanvasLayer/Menu/ButtonBackgroundWrapper/ButtonBackground/VBoxContainer" instance=ExtResource("4_df5ml")]
layout_mode = 2
text = "Start"

[node name="TutorialButton" parent="CanvasLayer/Menu/ButtonBackgroundWrapper/ButtonBackground/VBoxContainer" instance=ExtResource("4_df5ml")]
layout_mode = 2
text = "Tutorial"

[node name="SettingButton" parent="CanvasLayer/Menu/ButtonBackgroundWrapper/ButtonBackground/VBoxContainer" instance=ExtResource("4_df5ml")]
layout_mode = 2
text = "Spellbook"

[node name="QuitButton" parent="CanvasLayer/Menu/ButtonBackgroundWrapper/ButtonBackground/VBoxContainer" instance=ExtResource("4_df5ml")]
layout_mode = 2
text = "Quit"

[node name="VersionLabel" type="Label" parent="CanvasLayer/Menu/ButtonBackgroundWrapper/ButtonBackground"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -232.0
offset_right = 35.0
offset_bottom = -193.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_7ycku")
theme_override_font_sizes/font_size = 30
text = "NULL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/Menu/ButtonBackgroundWrapper/ButtonBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_22r4t")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Tutorial" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -632.0
offset_right = 1152.0
offset_bottom = -56.0
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Tutorial"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.882353)

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/Tutorial/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_22r4t")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Tutorial"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 56.0
offset_top = -240.0
offset_right = 336.0
offset_bottom = 232.0
grow_vertical = 2
texture = ExtResource("7_o14j8")

[node name="Label" type="Label" parent="CanvasLayer/Tutorial"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -256.0
offset_right = 512.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_7ycku")
theme_override_font_sizes/font_size = 34
text = "- Use a sequence of arrows (WASD) to prepare spells.
- Available prefixes and spells are shown on either side of the screen with a cooldown.
- You can cast a spell alone, or place a prefix before a spell to enhance its power.
- After inputting the correct sequence, press [Space] to confirm it, and use [Left-mouse button] to cast it on screen.
"
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t3ipv")
}
autoplay = "start"

[connection signal="pressed" from="CanvasLayer/Menu/ButtonBackgroundWrapper/ButtonBackground/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/ButtonBackgroundWrapper/ButtonBackground/VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/ButtonBackgroundWrapper/ButtonBackground/VBoxContainer/SettingButton" to="." method="_on_spellbook_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/ButtonBackgroundWrapper/ButtonBackground/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
